gatewaymanifestfiles - afrilins/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-gateway-dev
spec:
  selector:
    app: gateway-dev
    type: backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 18888
      targetPort: 18888 
      name: http-gateway
      nodePort: 32222
